fixed alignment issue

--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,9 @@ nav img {
 }
 
 .skill-card {
+   display: flex;
+   align-items: center;
+   justify-content: center;
    outline: 2px solid white;
    padding: 10px 20px;
    margin: 10px 10px;
